SOLEIL Sonar warning removed